{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 2820,
  "lineage": "2f9759b4-ed16-78c6-b468-fe8b8fbda90d",
  "resources": [
    {
      "module": "module.domain_controller",
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08e34c19a3a69e444",
            "arn": "arn:aws:ec2:us-east-1:809420506439:instance/i-0d2bb30ca04daccea",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d2bb30ca04daccea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "redes-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0367e09e71dbe9c20",
            "private_dns": "ip-10-0-2-145.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.145",
            "public_dns": "ec2-54-242-175-245.compute-1.amazonaws.com",
            "public_ip": "54.242.175.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02c0046ac2e0d6dde",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-028583d4e81702c61",
            "tags": {
              "CostCenter": "SECNET",
              "Departamento": "Infraestructura",
              "Env": "dev",
              "Environment": "dev",
              "Name": "windows-domain-controller",
              "Owner": "Darwin Lopez ",
              "Project": "redesYa",
              "Proyecto": "redesYa",
              "Role": "AD-Server"
            },
            "tags_all": {
              "CostCenter": "SECNET",
              "Departamento": "Infraestructura",
              "Env": "dev",
              "Environment": "dev",
              "Name": "windows-domain-controller",
              "Owner": "Darwin Lopez ",
              "Project": "redesYa",
              "Proyecto": "redesYa",
              "Role": "AD-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-041da995743f77be0"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.domain_controller.aws_security_group.win_sg",
            "module.domain_controller.data.template_file.user_data",
            "module.networking.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.domain_controller",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "win_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809420506439:security-group/sg-041da995743f77be0",
            "description": "RDP desde admin y LDAP/LDAPS/ICMP interna",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Todo trafico de salida",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041da995743f77be0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "LDAP interno",
                "from_port": 389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 389
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "LDAPS interno",
                "from_port": 636,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 636
              },
              {
                "cidr_blocks": [
                  "10.0.1.210/32"
                ],
                "description": "RDP desde VNS3 NAT",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "10.0.3.0/24"
                ],
                "description": "Ping desde VPN",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.3.0/24"
                ],
                "description": "RDP desde VPN",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "100.64.0.0/10"
                ],
                "description": "Ping desde 100.64.0.0/10",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "100.64.0.0/10"
                ],
                "description": "RDP desde 100.64.0.0/10",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "190.14.138.134/32"
                ],
                "description": "RDP admin",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "win-domain-sg",
            "name_prefix": "",
            "owner_id": "809420506439",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "SECNET",
              "Departamento": "Infraestructura",
              "Env": "dev",
              "Environment": "dev",
              "Name": "win-domain-sg",
              "Owner": "Darwin Lopez ",
              "Project": "redesYa",
              "Proyecto": "redesYa"
            },
            "tags_all": {
              "CostCenter": "SECNET",
              "Departamento": "Infraestructura",
              "Env": "dev",
              "Environment": "dev",
              "Name": "win-domain-sg",
              "Owner": "Darwin Lopez ",
              "Project": "redesYa",
              "Proyecto": "redesYa"
            },
            "timeouts": null,
            "vpc_id": "vpc-05906f367d7f87235"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ids",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09579a0c7ceca4162",
            "arn": "arn:aws:ec2:us-east-1:809420506439:instance/i-08847f914f7ee693a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08847f914f7ee693a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "redes-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aa1846c1474dd23d",
            "private_dns": "ip-10-0-1-234.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.234",
            "public_dns": "ec2-34-228-20-181.compute-1.amazonaws.com",
            "public_ip": "34.228.20.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e09ebf0b843d6212",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0603648db186cd1e1",
            "tags": {
              "CostCenter": "SECNET",
              "Departamento": "Infraestructura",
              "Env": "dev",
              "Environment": "dev",
              "Name": "ids-server",
              "Owner": "Darwin Lopez ",
              "Project": "redesYa",
              "Proyecto": "redesYa"
            },
            "tags_all": {
              "CostCenter": "SECNET",
              "Departamento": "Infraestructura",
              "Env": "dev",
              "Environment": "dev",
              "Name": "ids-server",
              "Owner": "Darwin Lopez ",
              "Project": "redesYa",
              "Proyecto": "redesYa"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00bf38445d1f5161b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ids.aws_security_group.ids_sg",
            "module.networking.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ids",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ids_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809420506439:security-group/sg-00bf38445d1f5161b",
            "description": "SSH solo desde admin y desde Firewall/VNS3",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir todo el trafico de salida",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00bf38445d1f5161b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.1/32"
                ],
                "description": "SSH desde Firewall/VNS3",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "190.14.138.134/32"
                ],
                "description": "SSH admin",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ids-sg",
            "name_prefix": "",
            "owner_id": "809420506439",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "SECNET",
              "Departamento": "Infraestructura",
              "Env": "dev",
              "Environment": "dev",
              "Name": "ids-sg",
              "Owner": "Darwin Lopez ",
              "Project": "redesYa",
              "Proyecto": "redesYa"
            },
            "tags_all": {
              "CostCenter": "SECNET",
              "Departamento": "Infraestructura",
              "Env": "dev",
              "Environment": "dev",
              "Name": "ids-sg",
              "Owner": "Darwin Lopez ",
              "Project": "redesYa",
              "Proyecto": "redesYa"
            },
            "timeouts": null,
            "vpc_id": "vpc-05906f367d7f87235"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0189d78fe35f353ba",
            "domain": "vpc",
            "id": "eipalloc-0189d78fe35f353ba",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-207-9-232.compute-1.amazonaws.com",
            "public_ip": "44.207.9.232",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809420506439:internet-gateway/igw-09109d6591cf5e061",
            "id": "igw-09109d6591cf5e061",
            "owner_id": "809420506439",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-05906f367d7f87235"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0189d78fe35f353ba",
            "association_id": "eipassoc-0f79e7bcf337d3b35",
            "connectivity_type": "public",
            "id": "nat-0d14cad476b7a0780",
            "network_interface_id": "eni-09c8e9f5315d20d41",
            "private_ip": "10.0.1.118",
            "public_ip": "44.207.9.232",
            "subnet_id": "subnet-0603648db186cd1e1",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809420506439:network-acl/acl-0716a9889267c5b8f",
            "egress": [],
            "id": "acl-0716a9889267c5b8f",
            "ingress": [],
            "owner_id": "809420506439",
            "subnet_ids": [],
            "tags": {
              "Name": "private-nacl"
            },
            "tags_all": {
              "Name": "private-nacl"
            },
            "vpc_id": "vpc-05906f367d7f87235"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809420506439:network-acl/acl-0e8e45100e58c24d6",
            "egress": [],
            "id": "acl-0e8e45100e58c24d6",
            "ingress": [],
            "owner_id": "809420506439",
            "subnet_ids": [],
            "tags": {
              "Name": "public-nacl"
            },
            "tags_all": {
              "Name": "public-nacl"
            },
            "vpc_id": "vpc-05906f367d7f87235"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private_nacl_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0d29dd94bcbcdd301",
            "network_acl_id": "acl-0716a9889267c5b8f",
            "subnet_id": "subnet-028583d4e81702c61"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_network_acl.private_nacl",
            "module.networking.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public_nacl_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0f0de766345b505a0",
            "network_acl_id": "acl-0e8e45100e58c24d6",
            "subnet_id": "subnet-0603648db186cd1e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_network_acl.public_nacl",
            "module.networking.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_allow_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1367899724",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0716a9889267c5b8f",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_network_acl.private_nacl",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_allow_ephemeral_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2052751148",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0716a9889267c5b8f",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 130,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_network_acl.private_nacl",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_allow_icmp_from_nat_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "100.64.0.0/10",
            "egress": false,
            "from_port": 8,
            "icmp_code": 0,
            "icmp_type": 0,
            "id": "nacl-845957270",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0716a9889267c5b8f",
            "protocol": "1",
            "rule_action": "allow",
            "rule_number": 151,
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_network_acl.private_nacl",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_allow_icmp_from_vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.3.0/24",
            "egress": false,
            "from_port": 8,
            "icmp_code": 0,
            "icmp_type": 0,
            "id": "nacl-4091713366",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0716a9889267c5b8f",
            "protocol": "1",
            "rule_action": "allow",
            "rule_number": 141,
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_network_acl.private_nacl",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_allow_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "190.14.138.134/32",
            "egress": false,
            "from_port": 3389,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3151274220",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0716a9889267c5b8f",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_network_acl.private_nacl",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_allow_rdp_from_nat_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "100.64.0.0/10",
            "egress": false,
            "from_port": 3389,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2465183087",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0716a9889267c5b8f",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 150,
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_network_acl.private_nacl",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_allow_rdp_from_vpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.3.0/24",
            "egress": false,
            "from_port": 3389,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1398893231",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0716a9889267c5b8f",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 140,
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_network_acl.private_nacl",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_allow_vpc_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3208645175",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0716a9889267c5b8f",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_network_acl.private_nacl",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_allow_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3221459776",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e8e45100e58c24d6",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_network_acl.public_nacl",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_allow_ephemeral_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3956380192",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e8e45100e58c24d6",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 130,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_network_acl.public_nacl",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1916007457",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e8e45100e58c24d6",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_network_acl.public_nacl",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3015519201",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e8e45100e58c24d6",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_network_acl.public_nacl",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_allow_nodejs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 3000,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-710888928",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e8e45100e58c24d6",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_network_acl.public_nacl",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "190.14.138.134/32",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2484748133",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e8e45100e58c24d6",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 105,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_network_acl.public_nacl",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_allow_wireguard_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "190.14.138.134/32",
            "egress": false,
            "from_port": 51820,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2220268577",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e8e45100e58c24d6",
            "protocol": "17",
            "rule_action": "allow",
            "rule_number": 115,
            "to_port": 51820
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_network_acl.public_nacl",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_allow_wireguard_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "190.14.138.134/32",
            "egress": true,
            "from_port": 51820,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2764208726",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0e8e45100e58c24d6",
            "protocol": "17",
            "rule_action": "allow",
            "rule_number": 115,
            "to_port": 51820
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_network_acl.public_nacl",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809420506439:route-table/rtb-033a3ed8587b082ad",
            "id": "rtb-033a3ed8587b082ad",
            "owner_id": "809420506439",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d14cad476b7a0780",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05906f367d7f87235"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.this",
            "module.networking.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809420506439:route-table/rtb-0858d9b75509ed0c4",
            "id": "rtb-0858d9b75509ed0c4",
            "owner_id": "809420506439",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09109d6591cf5e061",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05906f367d7f87235"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d18de40f9e46862c",
            "route_table_id": "rtb-033a3ed8587b082ad",
            "subnet_id": "subnet-028583d4e81702c61"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_nat_gateway.this",
            "module.networking.aws_route_table.private_rt",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5b6e66d702b1ad1",
            "route_table_id": "rtb-0858d9b75509ed0c4",
            "subnet_id": "subnet-0603648db186cd1e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_route_table.public_rt",
            "module.networking.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809420506439:subnet/subnet-028583d4e81702c61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028583d4e81702c61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "809420506439",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-05906f367d7f87235"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809420506439:subnet/subnet-0603648db186cd1e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0603648db186cd1e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "809420506439",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-05906f367d7f87235"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vns3_firewall",
      "mode": "managed",
      "type": "aws_instance",
      "name": "vns3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb6fd20f553438e3",
            "arn": "arn:aws:ec2:us-east-1:809420506439:instance/i-0c06466f10941757a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c06466f10941757a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "redes-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b8a888a4d3adb783",
            "private_dns": "ip-10-0-1-210.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.210",
            "public_dns": "ec2-34-203-10-9.compute-1.amazonaws.com",
            "public_ip": "34.203.10.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bd0a7b36fd30bd41",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0603648db186cd1e1",
            "tags": {
              "CostCenter": "SECNET",
              "Departamento": "Infraestructura",
              "Env": "dev",
              "Environment": "dev",
              "Name": "vns3-server",
              "Owner": "Darwin Lopez",
              "Project": "redesYa",
              "Proyecto": "redesYa",
              "Role": "vpn-firewall"
            },
            "tags_all": {
              "CostCenter": "SECNET",
              "Departamento": "Infraestructura",
              "Env": "dev",
              "Environment": "dev",
              "Name": "vns3-server",
              "Owner": "Darwin Lopez",
              "Project": "redesYa",
              "Proyecto": "redesYa",
              "Role": "vpn-firewall"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01d128193946da459"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.vns3_firewall.aws_security_group.vns3_sg",
            "module.vns3_firewall.data.template_file.user_data",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vns3_firewall",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vns3_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809420506439:security-group/sg-01d128193946da459",
            "description": "VNS3 Web UI (8000), SSH (22) y WireGuard (51820)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d128193946da459",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.3.0/24"
                ],
                "description": "WireGuard VPN",
                "from_port": 51820,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 51820
              },
              {
                "cidr_blocks": [
                  "190.14.138.134/32"
                ],
                "description": "SSH admin",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "190.14.138.134/32"
                ],
                "description": "VNS3 Web UI",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "190.14.138.134/32"
                ],
                "description": "WireGuard desde casa",
                "from_port": 51820,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 51820
              }
            ],
            "name": "vns3-sg",
            "name_prefix": "",
            "owner_id": "809420506439",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "SECNET",
              "Departamento": "Infraestructura",
              "Env": "dev",
              "Environment": "dev",
              "Name": "vns3-sg",
              "Owner": "Darwin Lopez",
              "Project": "redesYa",
              "Proyecto": "redesYa",
              "Role": "vpn-firewall"
            },
            "tags_all": {
              "CostCenter": "SECNET",
              "Departamento": "Infraestructura",
              "Env": "dev",
              "Environment": "dev",
              "Name": "vns3-sg",
              "Owner": "Darwin Lopez",
              "Project": "redesYa",
              "Proyecto": "redesYa",
              "Role": "vpn-firewall"
            },
            "timeouts": null,
            "vpc_id": "vpc-05906f367d7f87235"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809420506439:vpc/vpc-05906f367d7f87235",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-028889ee7f53b7fab",
            "default_route_table_id": "rtb-05cf6f1af4af7bb15",
            "default_security_group_id": "sg-061f1709c66a62948",
            "dhcp_options_id": "dopt-08203139ad7cafbe4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05906f367d7f87235",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05cf6f1af4af7bb15",
            "owner_id": "809420506439",
            "tags": {
              "CostCenter": "SECNET",
              "Env": "dev",
              "Name": "secure-vpc",
              "Owner": "Darwin Lopez ",
              "Project": "redesYa"
            },
            "tags_all": {
              "CostCenter": "SECNET",
              "Env": "dev",
              "Name": "secure-vpc",
              "Owner": "Darwin Lopez ",
              "Project": "redesYa"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.web_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-034ef5aff9ceafb77",
            "arn": "arn:aws:ec2:us-east-1:809420506439:instance/i-0abd6abbbb0abc6f5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0abd6abbbb0abc6f5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "redes-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03b32792519f02579",
            "private_dns": "ip-10-0-1-78.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.78",
            "public_dns": "ec2-98-80-12-167.compute-1.amazonaws.com",
            "public_ip": "98.80.12.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0eb96c779584f783a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0603648db186cd1e1",
            "tags": {
              "CostCenter": "SECNET",
              "Departamento": "Infraestructura",
              "Env": "dev",
              "Environment": "dev",
              "Name": "web-server",
              "Owner": "Darwin Lopez",
              "Project": "redesYa",
              "Proyecto": "redesYa"
            },
            "tags_all": {
              "CostCenter": "SECNET",
              "Departamento": "Infraestructura",
              "Env": "dev",
              "Environment": "dev",
              "Name": "web-server",
              "Owner": "Darwin Lopez",
              "Project": "redesYa",
              "Proyecto": "redesYa"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b34da31c9964f27f"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.web_server.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.web_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:809420506439:security-group/sg-0b34da31c9964f27f",
            "description": "Permite HTTP (80), Node.js (3000) y SSH (22)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir todo el trafico de salida",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b34da31c9964f27f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir HTTP (80)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir HTTPS (443)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir Node.js (3000)",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "190.14.138.134/32"
                ],
                "description": "Permitir SSH (22) solo desde administrador",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "809420506439",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "SECNET",
              "Departamento": "Infraestructura",
              "Env": "dev",
              "Environment": "dev",
              "Name": "web-sg",
              "Owner": "Darwin Lopez",
              "Project": "redesYa",
              "Proyecto": "redesYa"
            },
            "tags_all": {
              "CostCenter": "SECNET",
              "Departamento": "Infraestructura",
              "Env": "dev",
              "Environment": "dev",
              "Name": "web-sg",
              "Owner": "Darwin Lopez",
              "Project": "redesYa",
              "Proyecto": "redesYa"
            },
            "timeouts": null,
            "vpc_id": "vpc-05906f367d7f87235"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}